--- a/HappyRapidCart/HappyRapidCart/Base.lproj/Main.storyboard
+++ b/HappyRapidCart/HappyRapidCart/Base.lproj/Main.storyboard
@@ -226,75 +226,76 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="4" minimumInteritemSpacing="4" id="9yb-x3-aEI">
-                                    <size key="itemSize" width="172" height="180"/>
+                                    <size key="itemSize" width="153" height="161"/>
                                     <size key="headerReferenceSize" width="10" height="64"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ShoppingGridCell" id="7zB-UE-6uD" customClass="ShoppingGridCell" customModule="HappyRapidCart" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="64" width="172" height="180"/>
+                                        <rect key="frame" x="0.0" y="64" width="153" height="161"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="uAi-vJ-tkV">
-                                            <rect key="frame" x="0.0" y="0.0" width="172" height="180"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="153" height="161"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p5y-n3-HD2">
-                                                    <rect key="frame" x="0.0" y="0.0" width="172" height="180"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="172" height="159"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eLw-8p-Rfz">
-                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                            <rect key="frame" x="2" y="2" width="100" height="100"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="100" id="4Z8-Xz-bvh"/>
                                                                 <constraint firstAttribute="width" secondItem="eLw-8p-Rfz" secondAttribute="height" multiplier="10:10" id="EUg-yt-G8o"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="product" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bk3-WL-rkf">
-                                                            <rect key="frame" x="0.0" y="108" width="172" height="15"/>
+                                                            <rect key="frame" x="8" y="110" width="46.5" height="14.5"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 1.5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jm8-AK-Pfc">
-                                                            <rect key="frame" x="108" y="0.0" width="64" height="14.5"/>
+                                                            <rect key="frame" x="110" y="18" width="43" height="14.5"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                                             <color key="textColor" systemColor="systemBlueColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="size" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FbR-DY-Bvj">
-                                                            <rect key="frame" x="8" y="130.5" width="164" height="14.5"/>
+                                                            <rect key="frame" x="8" y="132.5" width="145" height="14.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstItem="jm8-AK-Pfc" firstAttribute="top" secondItem="p5y-n3-HD2" secondAttribute="top" id="6Bl-61-l7y"/>
+                                                        <constraint firstItem="jm8-AK-Pfc" firstAttribute="top" secondItem="p5y-n3-HD2" secondAttribute="top" constant="18" id="6Bl-61-l7y"/>
                                                         <constraint firstItem="bk3-WL-rkf" firstAttribute="top" secondItem="eLw-8p-Rfz" secondAttribute="bottom" constant="8" id="6ff-bh-ynd"/>
                                                         <constraint firstItem="jm8-AK-Pfc" firstAttribute="leading" secondItem="eLw-8p-Rfz" secondAttribute="trailing" constant="8" id="Bpf-sW-vKZ"/>
-                                                        <constraint firstAttribute="trailing" secondItem="FbR-DY-Bvj" secondAttribute="trailing" id="Dh4-eZ-nwh"/>
-                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="FbR-DY-Bvj" secondAttribute="bottom" id="E6x-Zb-M0x"/>
+                                                        <constraint firstAttribute="trailing" secondItem="FbR-DY-Bvj" secondAttribute="trailing" constant="19" id="Dh4-eZ-nwh"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="FbR-DY-Bvj" secondAttribute="bottom" constant="2" id="E6x-Zb-M0x"/>
                                                         <constraint firstItem="FbR-DY-Bvj" firstAttribute="leading" secondItem="p5y-n3-HD2" secondAttribute="leading" constant="8" id="Zwg-9G-JVs"/>
-                                                        <constraint firstAttribute="trailing" secondItem="bk3-WL-rkf" secondAttribute="trailing" id="aMy-hP-0nS"/>
-                                                        <constraint firstItem="eLw-8p-Rfz" firstAttribute="top" secondItem="p5y-n3-HD2" secondAttribute="top" id="cEE-6a-N5c"/>
-                                                        <constraint firstItem="eLw-8p-Rfz" firstAttribute="leading" secondItem="p5y-n3-HD2" secondAttribute="leading" id="jE3-Rn-VhH"/>
-                                                        <constraint firstAttribute="trailing" secondItem="jm8-AK-Pfc" secondAttribute="trailing" id="pgY-HQ-CYI"/>
+                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bk3-WL-rkf" secondAttribute="trailing" constant="45" id="aMy-hP-0nS"/>
+                                                        <constraint firstItem="eLw-8p-Rfz" firstAttribute="top" secondItem="p5y-n3-HD2" secondAttribute="top" constant="2" id="cEE-6a-N5c"/>
+                                                        <constraint firstItem="eLw-8p-Rfz" firstAttribute="leading" secondItem="p5y-n3-HD2" secondAttribute="leading" constant="2" id="jE3-Rn-VhH"/>
+                                                        <constraint firstAttribute="trailing" secondItem="jm8-AK-Pfc" secondAttribute="trailing" constant="19" id="pgY-HQ-CYI"/>
                                                         <constraint firstItem="FbR-DY-Bvj" firstAttribute="top" secondItem="bk3-WL-rkf" secondAttribute="bottom" constant="8" id="rcC-vy-Q0j"/>
-                                                        <constraint firstItem="bk3-WL-rkf" firstAttribute="leading" secondItem="p5y-n3-HD2" secondAttribute="leading" id="uh5-kS-Wl5"/>
+                                                        <constraint firstItem="bk3-WL-rkf" firstAttribute="leading" secondItem="p5y-n3-HD2" secondAttribute="leading" constant="8" id="uh5-kS-Wl5"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="p5y-n3-HD2" firstAttribute="leading" secondItem="uAi-vJ-tkV" secondAttribute="leading" id="DTt-hy-AbK"/>
                                                 <constraint firstItem="p5y-n3-HD2" firstAttribute="leading" secondItem="uAi-vJ-tkV" secondAttribute="leading" id="FdN-gz-0qK"/>
-                                                <constraint firstAttribute="trailing" secondItem="p5y-n3-HD2" secondAttribute="trailing" id="Ppl-n0-Zzm"/>
+                                                <constraint firstAttribute="trailing" secondItem="p5y-n3-HD2" secondAttribute="trailing" constant="-19" id="Ppl-n0-Zzm"/>
                                                 <constraint firstItem="p5y-n3-HD2" firstAttribute="top" secondItem="uAi-vJ-tkV" secondAttribute="top" id="VV5-6l-o05"/>
                                                 <constraint firstItem="p5y-n3-HD2" firstAttribute="top" secondItem="uAi-vJ-tkV" secondAttribute="top" id="tzp-jl-fFh"/>
-                                                <constraint firstAttribute="bottom" secondItem="p5y-n3-HD2" secondAttribute="bottom" id="wak-HL-vf4"/>
+                                                <constraint firstAttribute="bottom" secondItem="p5y-n3-HD2" secondAttribute="bottom" constant="2" id="wak-HL-vf4"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <size key="customSize" width="153" height="161"/>
                                         <connections>
                                             <outlet property="cellView" destination="p5y-n3-HD2" id="OHo-au-MkJ"/>
                                             <outlet property="priceLabel" destination="jm8-AK-Pfc" id="YDe-Tv-H7u"/>
