--- a/HappyRapidCart/HappyRapidCart/Base.lproj/Main.storyboard
+++ b/HappyRapidCart/HappyRapidCart/Base.lproj/Main.storyboard
@@ -267,21 +267,33 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bx8-Ou-mWg">
+                                                            <rect key="frame" x="110" y="41" width="43" height="40"/>
+                                                            <state key="normal" title="Add"/>
+                                                            <connections>
+                                                                <action selector="addCartButtonAction:" destination="7zB-UE-6uD" eventType="touchUpInside" id="KWQ-1W-Nlq"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <gestureRecognizers/>
                                                     <constraints>
                                                         <constraint firstItem="jm8-AK-Pfc" firstAttribute="top" secondItem="p5y-n3-HD2" secondAttribute="top" constant="18" id="6Bl-61-l7y"/>
                                                         <constraint firstItem="bk3-WL-rkf" firstAttribute="top" secondItem="eLw-8p-Rfz" secondAttribute="bottom" constant="8" id="6ff-bh-ynd"/>
+                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Bx8-Ou-mWg" secondAttribute="trailing" constant="35" id="9EZ-NZ-9Te"/>
                                                         <constraint firstItem="jm8-AK-Pfc" firstAttribute="leading" secondItem="eLw-8p-Rfz" secondAttribute="trailing" constant="8" id="Bpf-sW-vKZ"/>
                                                         <constraint firstAttribute="trailing" secondItem="FbR-DY-Bvj" secondAttribute="trailing" constant="19" id="Dh4-eZ-nwh"/>
                                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="FbR-DY-Bvj" secondAttribute="bottom" constant="2" id="E6x-Zb-M0x"/>
                                                         <constraint firstItem="FbR-DY-Bvj" firstAttribute="leading" secondItem="p5y-n3-HD2" secondAttribute="leading" constant="8" id="Zwg-9G-JVs"/>
                                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bk3-WL-rkf" secondAttribute="trailing" constant="45" id="aMy-hP-0nS"/>
+                                                        <constraint firstItem="FbR-DY-Bvj" firstAttribute="top" secondItem="Bx8-Ou-mWg" secondAttribute="bottom" constant="52.5" id="aND-Ab-Xd0"/>
+                                                        <constraint firstItem="Bx8-Ou-mWg" firstAttribute="top" secondItem="jm8-AK-Pfc" secondAttribute="bottom" constant="8" id="bw5-tm-pSW"/>
                                                         <constraint firstItem="eLw-8p-Rfz" firstAttribute="top" secondItem="p5y-n3-HD2" secondAttribute="top" constant="2" id="cEE-6a-N5c"/>
                                                         <constraint firstItem="eLw-8p-Rfz" firstAttribute="leading" secondItem="p5y-n3-HD2" secondAttribute="leading" constant="2" id="jE3-Rn-VhH"/>
                                                         <constraint firstAttribute="trailing" secondItem="jm8-AK-Pfc" secondAttribute="trailing" constant="19" id="pgY-HQ-CYI"/>
                                                         <constraint firstItem="FbR-DY-Bvj" firstAttribute="top" secondItem="bk3-WL-rkf" secondAttribute="bottom" constant="8" id="rcC-vy-Q0j"/>
                                                         <constraint firstItem="bk3-WL-rkf" firstAttribute="leading" secondItem="p5y-n3-HD2" secondAttribute="leading" constant="8" id="uh5-kS-Wl5"/>
+                                                        <constraint firstItem="Bx8-Ou-mWg" firstAttribute="leading" secondItem="eLw-8p-Rfz" secondAttribute="trailing" constant="8" id="xSf-Br-KQG"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -297,6 +309,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <size key="customSize" width="153" height="161"/>
                                         <connections>
+                                            <outlet property="addButton" destination="Bx8-Ou-mWg" id="FdB-2l-AfD"/>
                                             <outlet property="cellView" destination="p5y-n3-HD2" id="OHo-au-MkJ"/>
                                             <outlet property="priceLabel" destination="jm8-AK-Pfc" id="YDe-Tv-H7u"/>
                                             <outlet property="productImage" destination="eLw-8p-Rfz" id="RJQ-HT-p8A"/>
@@ -345,6 +358,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S1l-3m-foc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="9k7-VP-CkD"/>
             </objects>
             <point key="canvasLocation" x="2460.8695652173915" y="138.61607142857142"/>
         </scene>
@@ -368,38 +382,56 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="172"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tfi-Tm-v5i">
-                                                    <rect key="frame" x="10" y="32" width="123" height="112"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tfi-Tm-v5i">
+                                                    <rect key="frame" x="8" y="8" width="156" height="156"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="tfi-Tm-v5i" secondAttribute="height" multiplier="10:10" id="pDw-EA-VGS"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h5w-p5-6gD">
-                                                    <rect key="frame" x="151" y="45" width="67" height="17"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h5w-p5-6gD">
+                                                    <rect key="frame" x="172" y="31" width="67" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Size Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pxf-62-7uc">
-                                                    <rect key="frame" x="151" y="70" width="66" height="17"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCc-T5-Eeu">
+                                                    <rect key="frame" x="269" y="53" width="135" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCc-T5-Eeu">
-                                                    <rect key="frame" x="329" y="53" width="72" height="17"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qx4-Yc-Eaf" userLabel="Quantity Text Field">
-                                                    <rect key="frame" x="238" y="45" width="62" height="34"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qx4-Yc-Eaf" userLabel="Quantity Text Field">
+                                                    <rect key="frame" x="266" y="78" width="120" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pxf-62-7uc">
+                                                    <rect key="frame" x="172" y="64" width="67" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tfi-Tm-v5i" firstAttribute="top" secondItem="cEz-Ka-Vp1" secondAttribute="top" constant="8" id="0vl-WC-60t"/>
+                                                <constraint firstItem="Qx4-Yc-Eaf" firstAttribute="leading" secondItem="tfi-Tm-v5i" secondAttribute="trailing" constant="102" id="74R-wC-8Xy"/>
+                                                <constraint firstItem="h5w-p5-6gD" firstAttribute="top" secondItem="cEz-Ka-Vp1" secondAttribute="topMargin" constant="20" id="7Do-VD-rQd"/>
+                                                <constraint firstItem="rCc-T5-Eeu" firstAttribute="leading" secondItem="h5w-p5-6gD" secondAttribute="trailing" constant="30" id="AJd-6z-U5E"/>
+                                                <constraint firstAttribute="trailing" secondItem="rCc-T5-Eeu" secondAttribute="trailing" constant="10" id="BiX-Tj-lZS"/>
+                                                <constraint firstItem="tfi-Tm-v5i" firstAttribute="leading" secondItem="cEz-Ka-Vp1" secondAttribute="leading" constant="8" id="FoL-qv-wIe"/>
+                                                <constraint firstItem="rCc-T5-Eeu" firstAttribute="leading" secondItem="Pxf-62-7uc" secondAttribute="trailing" constant="30" id="MkQ-l3-fVG"/>
+                                                <constraint firstItem="h5w-p5-6gD" firstAttribute="leading" secondItem="tfi-Tm-v5i" secondAttribute="trailing" constant="8" id="UMy-yt-AZL"/>
+                                                <constraint firstItem="rCc-T5-Eeu" firstAttribute="top" secondItem="cEz-Ka-Vp1" secondAttribute="top" constant="53" id="X9t-jM-pf4"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Qx4-Yc-Eaf" secondAttribute="trailing" constant="8" id="Xfi-sn-tCX"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Qx4-Yc-Eaf" secondAttribute="bottom" constant="49" id="ZO0-WX-GdR"/>
+                                                <constraint firstItem="Pxf-62-7uc" firstAttribute="top" secondItem="h5w-p5-6gD" secondAttribute="bottom" constant="16" id="aCD-IE-goF"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Pxf-62-7uc" secondAttribute="bottom" constant="40" id="chi-bx-mtu"/>
+                                                <constraint firstItem="h5w-p5-6gD" firstAttribute="leading" secondItem="tfi-Tm-v5i" secondAttribute="trailing" constant="8" id="ggY-UJ-2qk"/>
+                                                <constraint firstAttribute="bottom" secondItem="tfi-Tm-v5i" secondAttribute="bottom" constant="8" id="jkd-Ty-CK2"/>
+                                                <constraint firstItem="Pxf-62-7uc" firstAttribute="leading" secondItem="tfi-Tm-v5i" secondAttribute="trailing" constant="8" id="xgr-df-3PX"/>
+                                                <constraint firstItem="Qx4-Yc-Eaf" firstAttribute="top" secondItem="rCc-T5-Eeu" secondAttribute="bottom" constant="8" id="xhc-mG-Y98"/>
+                                                <constraint firstItem="Qx4-Yc-Eaf" firstAttribute="top" secondItem="rCc-T5-Eeu" secondAttribute="bottom" constant="8" id="zhA-ec-Z5i"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="priceLabel" destination="rCc-T5-Eeu" id="4Wr-Ur-9P6"/>
@@ -416,6 +448,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="2Jo-GW-Ple"/>
+                    <connections>
+                        <outlet property="cartTableView" destination="Ksv-u7-A9D" id="BXJ-fB-aZs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R7a-K4-c32" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
